<resources>
    <string name="app_name">Phone Review</string>
    <string name="title">Phone</string>
    <string name="hint_title">Enter phone name here</string>
    <string name="singers">Singers</string>
    <string name="hint_singers">Enter Phone\' name here</string>
    <string name="year">Year</string>
    <string name="hint_year">Enter year of release here</string>
    <string name="stars">Stars</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="title_activity_main">Insert Phone</string>
    <string name="title_activity_second">Show Phone</string>
    <string name="title_activity_third">Modify Phone</string>
    <string name="id">Phone ID</string>
    <string name="btnShowList">Show List</string>
    <string name="btnInsert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="btn5Stars">Show all Phones with 5 stars</string>
    <style name="RatingBar" parent="Theme.AppCompat">
        <item name="colorControlActivated">#FBAE3C</item>
    </style>
</resources>